feat(policyid): edit registery-diff endpoint for optional policyid
